--- a/gb/20/2/10/n11859548.md
+++ b/gb/20/2/10/n11859548.md
@@ -1,66 +1,70 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liahn236/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liahn236/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liahn236/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liahn236/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liahn236/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liahn236/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liahn236/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liahn236/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/liahn236/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/liahn236/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/liahn236/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/liahn236/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新冠病毒潜伏期最长24天 逾半感染者初期不发烧</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/2019-n-coronavirus_1286643355-600x400.jpg" />
 <h6>最新论文指出，新型冠状病毒的潜伏期最长可达24天，且逾半数的病人在就诊时没有发烧症状。(Shutterstock)
 </h6>
 <hr>
-<p>2月9日，中共国家卫健委高级别专家组组长钟南山领衔发表关于<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E6%96%B0%E5%9E%8B%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md">新型冠状病毒</a>的最新研究论文。论文指出，新型冠状病毒的<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E6%BD%9C%E4%BC%8F%E6%9C%9F.md">潜伏期</a>最长可达24天，且逾半数的病人在就诊时没有<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E5%8F%91%E7%83%A7.md">发烧</a><a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E7%97%87%E7%8A%B6.md">症状</a>。</p>
-<h2><span style="color: #188638;">平均感染年龄为47岁 不排除“超级传播者”</span></h2>
-<p>论文表示，任何年龄都可能感染<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E6%96%B0%E5%9E%8B%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md">新型冠状病毒</a>。感染者的平均年龄为47岁，其中42%是女性。</p>
+<p>2月9日，中共国家卫健委高级别专家组组长钟南山领衔发表关于<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E5%9E%8B%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md#1">新型冠状病毒</a>的最新研究论文。论文指出，新型冠状病毒的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%BD%9C%E4%BC%8F%E6%9C%9F.md#1">潜伏期</a>最长可达24天，且逾半数的病人在就诊时没有<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%91%E7%83%A7.md#1">发烧</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%97%87%E7%8A%B6.md#1">症状</a>。</p>
+<h2><span style="color: #188638;">平均感染年龄为47岁 不排除“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E4%BC%A0%E6%92%AD%E8%80%85.md#1">超级传播者</a>”</span></h2>
+<p>论文表示，任何年龄都可能感染<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E5%9E%8B%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md#1">新型冠状病毒</a>。感染者的平均年龄为47岁，其中42%是女性。</p>
 <p>研究者分析了遍部31个省市区的1,099个确诊感染新型冠状病毒病人的数据，发现在所有感染者中，只有约1.18%的病人曾经接触过野生动物。有31%的人近期去过武汉，近72%曾经接触过从武汉来的人。</p>
 <p>然而，也有约四分之一的病人近期没去过武汉，也未曾和去过武汉的人有任何接触，却也感染了新型冠状病毒。</p>
-<p>这些发现显示，<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92.md">新冠病毒</a>正通过人传人的方式迅速传播，数据呼应了最近爆发的家庭内部传染，以及无<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E7%97%87%E7%8A%B6.md">症状</a>的“沉默传播”。与此同时，钟南山表示，不排除“超级传播者”的存在。</p>
+<p>这些发现显示，新冠病毒正通过人传人的方式迅速传播，数据呼应了最近爆发的家庭内部传染，以及无<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%97%87%E7%8A%B6.md#1">症状</a>的“沉默传播”。与此同时，钟南山表示，不排除“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B6%85%E7%BA%A7%E4%BC%A0%E6%92%AD%E8%80%85.md#1">超级传播者</a>”的存在。</p>
 <p>研究还发现，除了飞沫外，部分病人的尿液、粪便里也检测出新型冠状病毒。</p>
-<h2><span style="color: #188638;">新型冠状病毒<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E6%BD%9C%E4%BC%8F%E6%9C%9F.md">潜伏期</a>最长为24天</span></h2>
+<h2><span style="color: #188638;">新型冠状病毒<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%BD%9C%E4%BC%8F%E6%9C%9F.md#1">潜伏期</a>最长为24天</span></h2>
 <p>中共国家卫健委此前表示，新型冠状病毒的潜伏期为10天左右，最短1天，最长14天。但此次研究发现，新型冠状病毒的潜伏期最短0天，最长可达24天。</p>
-<h2><span style="color: #188638;"><a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92.md">新冠病毒</a>确诊者 近半数最初没有<a href="https://github.com/liahn236/djy/blob/master/gb/tag/%E5%8F%91%E7%83%A7.md">发烧</a>症状</span></h2>
+<h2><span style="color: #188638;">新冠病毒确诊者 近半数最初没有<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%91%E7%83%A7.md#1">发烧</a>症状</span></h2>
 <p>发烧和咳嗽是新型冠状病毒最普遍的症状。然而，研究强调，在调查的患者中，最初只有约44%的确诊病人发烧，但住院后，88%的人发展出发烧现象，约68%的人有咳嗽症状。其它症状还包括腹泻和呕吐，但并不常见。</p>
 <p>感染新型冠状病毒的人，在胸部电脑断层扫描中，典型的病变是肺部出现毛玻璃状，以及双边斑驳阴影。研究发现，病人入院时，一半的人有肺部毛玻璃状病变。</p>
 <p>此外，研究还指出，新型冠状病毒感染并发症包括肺炎、急性呼吸窘迫综合症、败血性休克等。◇</p>
-<p>浏览<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/liahn236/djy/blob/master/gb/nsc1002.md" target="_blank" rel="noopener noreferrer">大纪元健康1+1频道</a></span></span>，了解更多健康知识！</p>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/liahn236/djy/blob/master/gb/20/2/8/n11854231.md" target="_blank" rel="noopener noreferrer">武汉肺炎世界3类治愈案例 分别用何疗法？</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/liahn236/djy/blob/master/gb/20/1/30/n11831297.md" target="_blank" rel="noopener noreferrer">无症状也能传染 武汉肺炎存在“沉默传播者”</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/liahn236/djy/blob/master/gb/20/2/4/n11844850.md" target="_blank" rel="noopener noreferrer">常戴口罩、勤洗手带来3大副作用 医师教你应对</a></span></h3>
-<p>责任编辑：李莉</p>
+<p>浏览<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">大纪元健康1+1频道</a></span></span>，了解更多健康知识！</p>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/tjvrql262/djy/blob/master/gb/20/2/8/n11854231.md#1" target="_blank" rel="noopener noreferrer">武汉肺炎世界3类治愈案例 分别用何疗法？</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/tjvrql262/djy/blob/master/gb/20/1/30/n11831297.md#1" target="_blank" rel="noopener noreferrer">无症状也能传染 武汉肺炎存在“沉默传播者”</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/tjvrql262/djy/blob/master/gb/20/2/4/n11844850.md#1" target="_blank" rel="noopener noreferrer">常戴口罩、勤洗手带来3大副作用 医师教你应对</a></span></h3>
+<p>责任编辑：李慧</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/10/n11859548.htm">新冠病毒潜伏期最长24天 逾半感染者初期不发烧</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828782.htm">250岁的隐士 娓娓道出前朝旧事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/10/2/2/n2807462.htm">山中采药两天  回乡竟已两百年</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851416.htm">【命理】东汉名将邓禹为13儿看相 个个应验</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846604.htm">元宵猜灯谜1  “字谜”你猜对多少？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852360.htm">【新闻看点】李文亮去世九亿围观 川习通话说啥</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852281.htm">【罗厨寻味】年菜系列之六：煎酿鲈鱼</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852119.htm">【老外看香港】武汉肺炎 香港危急</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853323.htm">【独家】一天烧百具尸体 殡仪馆员怒斥狗官</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853087.htm">【疫情最前线】证据指中共研发致命生化武器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854482.htm">武汉笼罩阴霾 英媒曝焚烧感染者尸体所致</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852799.htm">小区现新冠病毒患者 陈浩民一家六口宅在家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11856505.htm">被传产下双胞胎 唐嫣：愿所有人都能平安回家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11856400.htm">传黄渤新片欠租 剧组疑遭影城赶出拍摄场地</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11856834.htm">第92届奥斯卡揭晓 韩片《寄生虫》捧四大奖</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852560.htm">被疑撑香港医护罢工 郭富城声明账号被盗用</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/4/11/n9025454.htm">别吃这12种海鲜！为何不要吃 + 吃什么鱼好</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854231.htm">武汉肺炎世界3类治愈案例 分别用何疗法？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853203.htm">笔画中的秘密 如何从笔迹看出个性？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854210.htm">官方首证新冠病毒可气溶胶传播 如何防？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11856279.htm">病毒可在生鲜存活吗？家居社区啥传播途径</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/11/n11860090.md#1">拍“五分钟拖出八具尸体” 方斌证实被抓</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/11/n11859848.md#1">疫情失控官场生变 湖北卫健委书记主任被免职</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/10/n11859316.md#1">《院士售实验室动物获利千万 被囚》热传</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/5/n11846752.md#1">带呼吸阀的N95安全吗？1图看懂N系口罩差别</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/4/n11844216.md#1">武汉肺炎撤侨 一文看懂各国隔离措施</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/7/n11850819.md#1">古人的防疫智慧 六种天然食物香料提升免疫力</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liahn236/djy/blob/master/gb/20/2/10/n11859548.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/liahn236/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/liahn236/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/liahn236/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/liahn236/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liahn236/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/10/n11859548.htm">新冠病毒潜伏期最长24天 逾半感染者初期不发烧</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/10/n11859548.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
